feat: add cicdlog 表 获取build 日志记录
